aded code to create systems that can structurally commit bundle data as well

--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,4 @@ ol_dump_ratings_2025-02-11.txt
 # Custom docs that are not really shareable yet
 docs/cloudflare_d1_setup.md
 testdb.sqlite3
+.wrangler
