--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@cloudflare/workers-types": "^4.20250303.0",
     "@types/bun": "latest",
     "@vitejs/plugin-vue": "^5.2.1",
+    "prettier": "^3.5.3",
     "vite": "^6.2.0",
     "vue": "^3.4.21",
     "vue-tsc": "^2.0.6",
@@ -24,5 +25,8 @@
   },
   "peerDependencies": {
     "typescript": "^5.7.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7"
   }
 }
