--- a/package.json
+++ b/package.json
@@ -4,29 +4,23 @@
   "type": "module",
   "scripts": {
     "cli": "bun run api/index.ts",
+    "cli:api": "bun run api/cli/api-client.ts",
     "server": "bun --watch run api/index.ts --server",
     "frontend:dev": "vite --config vite.config.ts",
     "frontend:build": "vite build --config vite.config.ts",
     "frontend:type-check": "vue-tsc --noEmit",
-    "frontend:deploy": "wrangler deploy",
-    "dev": "wrangler dev",
-    "cf-typegen": "wrangler types"
   },
   "devDependencies": {
-    "@cloudflare/vitest-pool-workers": "^0.7.7",
-    "@cloudflare/workers-types": "^4.20250303.0",
     "@types/bun": "latest",
     "@vitejs/plugin-vue": "^5.2.1",
     "prettier": "^3.5.3",
     "vite": "^6.2.0",
     "vue": "^3.4.21",
-    "vue-tsc": "^2.0.6",
-    "wrangler": "^3.114.0"
+    "vue-tsc": "^2.0.6"
   },
   "peerDependencies": {
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "dotenv": "^16.4.7"
   }
 }
