Added static site generation by Astro, based on an export from the humble bundles in SQL

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "bun --watch run api/index.ts --server",
     "frontend:dev": "vite --config vite.config.ts",
     "frontend:build": "vite build --config vite.config.ts",
-    "frontend:type-check": "vue-tsc --noEmit",
+    "frontend:type-check": "vue-tsc --noEmit"
   },
   "devDependencies": {
     "@types/bun": "latest",
