Added scripts to run this job in the OVH deployment

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 POSTGRES_DB=humble_bundles
 POSTGRES_USER=youruser
-POSTGRES_PASSWORD=yourpassword
+PGPASSWORD=yourpassword
 
 GITHUB_USERNAME=yourusername
 GITHUB_EMAIL=you@example.com
