--- a/local-docker-compose.yaml
+++ b/local-docker-compose.yaml
@@ -7,6 +7,7 @@ services:
     env_file:
       - .env.local
     volumes:
+      - gitdata:/app/.git
       # Mount everything except .git directory. Look later if there is a better way of doing this, or maybe just do an incremental commit on the folder with the updated books..
       - ./api:/app/api
       - ./cmd:/app/cmd
@@ -38,3 +39,6 @@ services:
 networks:
   humble_net:
     external: true
+
+volumes: 
+  gitdata:
