--- a/ovh-docker-compose.yaml
+++ b/ovh-docker-compose.yaml
@@ -5,7 +5,7 @@ services:
       context: .
       dockerfile: job.dockerfile
     env_file:
-      - .env.ovh
+      - .env
     volumes:
       # Mount everything except .git directory. Look later if there is a better way of doing this, or maybe just do an incremental commit on the folder with the updated books..
       - gitdata:/app/.git
