changed postgres env vars, because renaming these was all kinds of dumb

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-POSTGRES_HOST=postgres
-POSTGRES_PORT=5432
-POSTGRES_DB=humble_bundles
-POSTGRES_USER=youruser
+PGHOST=postgres
+PGPORT=5432
+PGDATABASE=humble_bundles
+PGUSERNAME=youruser
 PGPASSWORD=yourpassword
 
 GITHUB_USERNAME=yourusername
