it's pguser instead of pgusername

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 PGHOST=postgres
 PGPORT=5432
 PGDATABASE=humble_bundles
-PGUSERNAME=youruser
+PGUSER=youruser
 PGPASSWORD=yourpassword
 
 GITHUB_USERNAME=yourusername
