move git outside of the container, because this shit isn't working

--- a/ovh-docker-compose.yaml
+++ b/ovh-docker-compose.yaml
@@ -7,8 +7,7 @@ services:
     env_file:
       - .env
     volumes:
-      # Mount everything except .git directory. Look later if there is a better way of doing this, or maybe just do an incremental commit on the folder with the updated books..
-      - gitdata:/app/.git
+      # Mount directories without Git
       - ./api:/app/api
       - ./cmd:/app/cmd
       - ./db:/app/db
@@ -41,5 +40,4 @@ networks:
   humble_net:
     external: true
 
-volumes: 
-  gitdata: # volume to cache git history, so we can check if something goes wrong
+volumes: {}
