--- a/package.json
+++ b/package.json
@@ -5,18 +5,12 @@
   "scripts": {
     "cli": "bun run api/index.ts",
     "cli:api": "bun run api/cli/api-client.ts",
-    "server": "bun --watch run api/index.ts --server",
-    "frontend:dev": "vite --config vite.config.ts",
-    "frontend:build": "vite build --config vite.config.ts",
-    "frontend:type-check": "vue-tsc --noEmit"
+    "server": "bun --watch run api/index.ts --server"
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "@vitejs/plugin-vue": "^5.2.1",
     "prettier": "^3.5.3",
-    "vite": "^6.2.0",
-    "vue": "^3.4.21",
-    "vue-tsc": "^2.0.6"
+    "vite": "^6.2.0"
   },
   "peerDependencies": {
     "typescript": "^5.7.3"
