--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "bun --watch run api/index.ts --server"
   },
   "devDependencies": {
-    "@types/bun": "latest",
+    "@types/bun": "^1.2.3",
     "prettier": "^3.5.3",
     "vite": "^6.2.0"
   },
